Bug 463813 - video doesnt play
Summary: video doesnt play
Status: RESOLVED FIXED
Alias: None
Product: Haruna
Classification: Applications
Component: generic (other bugs)
Version First Reported In: 0.10.0
Platform: Flatpak Linux
: NOR normal
Target Milestone: ---
Assignee: george fb
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-01-04 01:03 UTC by kinghat
Modified: 2023-01-05 18:49 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
haruna borked config file (1.59 KB, application/gzip)
2023-01-05 17:34 UTC, kinghat
Details

Note You need to log in before you can comment on or make changes to this bug.
Description kinghat 2023-01-04 01:03:05 UTC
SUMMARY
after the last flatpak update, haruna fails to play video either by selecting the video and then "open with" or by opening haruna and navigating to media. tested with mkv and mp4 and on fedora 37 kde and manjaro kde stable.


STEPS TO REPRODUCE
1. make sure youre on 0.10.0 flatpak
2. use haruna to play video

OBSERVED RESULT
haruna opens and the video doesnt play. shows all zeros at the bottom and there is no indication that a file as been opened by the title bar.

EXPECTED RESULT
haruna should open the video and start playing.

SOFTWARE/OS VERSIONS
Operating System: Manjaro Linux
KDE Plasma Version: 5.26.4
KDE Frameworks Version: 5.100.0
Qt Version: 5.15.7
Kernel Version: 5.19.17-2-MANJARO (64-bit)
Graphics Platform: X11


ADDITIONAL INFORMATION
Comment 1 Patrick Silva 2023-01-04 03:27:10 UTC
Same with non-flatpak version on Arch Linux. Haruna 0.10 does not play any video.
Comment 2 george fb 2023-01-04 10:26:00 UTC
Try deleting the cache `/home/name/.cache/KDE/haruna`.
If that doesn't work try renaming the config folder `/home/name/.config/haruna` and if that fixes it share your config file (might want to remove the last played file from it)
Comment 3 george fb 2023-01-04 10:29:31 UTC
For flatpak the cache and config folders are in `/home/name/.var/app/org.kde.haruna`, so just rename the `org.kde.haruna` folder.
Comment 4 kinghat 2023-01-04 17:42:03 UTC
(In reply to george fb from comment #3)
> For flatpak the cache and config folders are in
> `/home/name/.var/app/org.kde.haruna`, so just rename the `org.kde.haruna`
> folder.

this fixed it for me 👌
Comment 5 george fb 2023-01-05 15:48:02 UTC
(In reply to kinghat from comment #4)
> this fixed it for me 👌

Do you still have the old folder?
If so please change back to it and find out which folder (cache or config) caused the problem, if it's the config please attach the config file.
Comment 6 kinghat 2023-01-05 17:34:37 UTC
Created attachment 155058 [details]
haruna borked config file

it was the config file.
Comment 7 george fb 2023-01-05 18:47:49 UTC
Git commit ce265d30c20d0fa03ea6b3b29d9755d121b90657 by George Florea Bănuș.
Committed on 05/01/2023 at 18:45.
Pushed by georgefb into branch 'master'.

playlistmodel: fix not playing opened file when `loadSiblings` setting in off

M  +8    -9    src/models/playlistmodel.cpp

https://invent.kde.org/multimedia/haruna/commit/ce265d30c20d0fa03ea6b3b29d9755d121b90657
Comment 8 george fb 2023-01-05 18:49:11 UTC
(In reply to kinghat from comment #6)
> Created attachment 155058 [details]
> haruna borked config file
> 
> it was the config file.

Thanks, that helped.