playlistmodel: fix not playing opened file when `loadSiblings` setting in off

BUG: 463813